# djr3x_voice

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DASHBOARD_SETUP.md  README.md  README_HOLOCRON_EXPORT.md  SETUP_DJ_COMMAND.md  analyze_articles.py  app.py  audio_processor.py  check-dashboard-health.sh  check_duplicate_articles.py  check_for_large_chunks.py  check_pinecone.py  check_pinecone_format.py  check_pinecone_module.py  check_pinecone_token_distribution.py  check_vector_dups.py  cluster_map.json  count_canon_legends.py  create_bert_embeddings.py  create_pinecone_index.py  create_pinecone_test_batch.py  create_test_vector.py  create_test_vector2.py  create_test_vector3.py  create_vectors_robust.py  debug_audio.npy  debug_openai_stack.py  debug_spotify_config.py  dj-r3x-PRD.md  dj_r3x-persona.txt  download_and_process_bert.py  e5_migration_checkpoint.json.bak  e5_migration_checkpoint.json.corrupted  e5_migration_checkpoint.json.fixed.tmp  env.example  export_alternative.py  (+70 more)
analysis_results/: content_type_stats.json  content_type_stats_improved.json  filter_statistics.json  page_samples.json
arduino/: eyes.ino
brain_service/: brain_service.py
cantina_os/: AUDIO_PIPELINE_FIX.md  README.md  TODO.md  WEBBRIDGE_PYDANTIC_ENHANCEMENT_SUMMARY.md  cli_test.py  debug_spotify_config.py  dj_r3x-persona.txt  dj_r3x-transition-persona.txt  dj_r3x-verbal-feedback-persona.txt  pytest.ini  requirements.txt  run_tests.py  run_with_arduino.sh  setup.py  simple_test.py  simple_test_music.py  test_transcription.py
clusters/: README.md  cluster_0.json  (+75 more)
(+500 files in other folders)
