[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-r3x-voice"
version = "0.1.0"
description = "DJ-R3X Voice Control System"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "pyee"
]

[tool.pytest.ini_options]
testpaths = ["tests", "cantina_os/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "strict"

[tool.pytest-asyncio]
asyncio_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["cantina_os"] 